# transit-sign-rust

./: Cargo.toml  README.md  config.toml  display.toml
src/: config.rs  main.rs
src/display/: fsm.rs  hardware.rs  mod.rs  sim.rs
src/input/: flic.rs  mod.rs
src/transit/: bart.rs  baywheels.rs  mod.rs  muni.rs  state.rs
