[package]
name = "transit-sign"
version = "0.1.0"
edition = "2021"
authors = ["Transit Sign Developer"]
description = "A Raspberry Pi-based transit predictions display for BART, Muni, and Bay Wheels"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
futures = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
embedded-graphics-core = "0.4.0"
embedded-graphics = "0.8.1"
itertools = "0.14.0"

[target.'cfg(target_os = "macos")'.dependencies]
embedded-graphics-simulator = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
rpi-led-matrix = { git = "https://github.com/rust-rpi-led-matrix/rust-rpi-rgb-led-matrix", package = "rpi-led-matrix" }
